// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`columnParallel 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        4,
        4,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          4,
          4,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "Jan-sales",
      "__Dim_Color__": "Jan",
      "__Dim_Detail__": "Jan-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jan-profit",
      "__Dim_Color__": "Jan",
      "__Dim_Detail__": "Jan-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "profit": 10000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jan-discount",
      "__Dim_Color__": "Jan",
      "__Dim_Detail__": "Jan-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "discount": 0.5,
      "month": "Jan",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Feb-sales",
      "__Dim_Color__": "Feb",
      "__Dim_Detail__": "Feb-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Feb-profit",
      "__Dim_Color__": "Feb",
      "__Dim_Detail__": "Feb-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "profit": 20000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Feb-discount",
      "__Dim_Color__": "Feb",
      "__Dim_Detail__": "Feb-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Feb",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Mar-sales",
      "__Dim_Color__": "Mar",
      "__Dim_Detail__": "Mar-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Mar-profit",
      "__Dim_Color__": "Mar",
      "__Dim_Detail__": "Mar-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "profit": 30000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Mar-discount",
      "__Dim_Color__": "Mar",
      "__Dim_Detail__": "Mar-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Mar",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Apr-sales",
      "__Dim_Color__": "Apr",
      "__Dim_Detail__": "Apr-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Apr-profit",
      "__Dim_Color__": "Apr",
      "__Dim_Detail__": "Apr-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "profit": 40000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Apr-discount",
      "__Dim_Color__": "Apr",
      "__Dim_Detail__": "Apr-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Apr",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "May-sales",
      "__Dim_Color__": "May",
      "__Dim_Detail__": "May-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "May-profit",
      "__Dim_Color__": "May",
      "__Dim_Detail__": "May-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "profit": 50000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "May-discount",
      "__Dim_Color__": "May",
      "__Dim_Detail__": "May-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.05,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "discount": 0.05,
      "month": "May",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jun-sales",
      "__Dim_Color__": "Jun",
      "__Dim_Detail__": "Jun-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jun-profit",
      "__Dim_Color__": "Jun",
      "__Dim_Detail__": "Jun-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 60000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "profit": 60000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jun-discount",
      "__Dim_Color__": "Jun",
      "__Dim_Detail__": "Jun-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Jun",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jul-sales",
      "__Dim_Color__": "Jul",
      "__Dim_Detail__": "Jul-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1400000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Jul",
        "profit": 70000,
        "sales": 1400000,
        "year": "2019",
      },
      "month": "Jul",
      "sales": 1400000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jul-profit",
      "__Dim_Color__": "Jul",
      "__Dim_Detail__": "Jul-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 70000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Jul",
        "profit": 70000,
        "sales": 1400000,
        "year": "2019",
      },
      "month": "Jul",
      "profit": 70000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jul-discount",
      "__Dim_Color__": "Jul",
      "__Dim_Detail__": "Jul-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Jul",
        "profit": 70000,
        "sales": 1400000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Jul",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Aug-sales",
      "__Dim_Color__": "Aug",
      "__Dim_Detail__": "Aug-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1600000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Aug",
        "profit": 80000,
        "sales": 1600000,
        "year": "2019",
      },
      "month": "Aug",
      "sales": 1600000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Aug-profit",
      "__Dim_Color__": "Aug",
      "__Dim_Detail__": "Aug-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 80000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Aug",
        "profit": 80000,
        "sales": 1600000,
        "year": "2019",
      },
      "month": "Aug",
      "profit": 80000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Aug-discount",
      "__Dim_Color__": "Aug",
      "__Dim_Detail__": "Aug-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Aug",
        "profit": 80000,
        "sales": 1600000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Aug",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sep-sales",
      "__Dim_Color__": "Sep",
      "__Dim_Detail__": "Sep-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1800000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Sep",
        "profit": 90000,
        "sales": 1800000,
        "year": "2019",
      },
      "month": "Sep",
      "sales": 1800000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sep-profit",
      "__Dim_Color__": "Sep",
      "__Dim_Detail__": "Sep-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 90000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Sep",
        "profit": 90000,
        "sales": 1800000,
        "year": "2019",
      },
      "month": "Sep",
      "profit": 90000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sep-discount",
      "__Dim_Color__": "Sep",
      "__Dim_Detail__": "Sep-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Sep",
        "profit": 90000,
        "sales": 1800000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Sep",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Oct-sales",
      "__Dim_Color__": "Oct",
      "__Dim_Detail__": "Oct-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2000000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Oct",
        "profit": 100000,
        "sales": 2000000,
        "year": "2019",
      },
      "month": "Oct",
      "sales": 2000000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Oct-profit",
      "__Dim_Color__": "Oct",
      "__Dim_Detail__": "Oct-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 100000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Oct",
        "profit": 100000,
        "sales": 2000000,
        "year": "2019",
      },
      "month": "Oct",
      "profit": 100000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Oct-discount",
      "__Dim_Color__": "Oct",
      "__Dim_Detail__": "Oct-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Oct",
        "profit": 100000,
        "sales": 2000000,
        "year": "2019",
      },
      "discount": 0.5,
      "month": "Oct",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Nov-sales",
      "__Dim_Color__": "Nov",
      "__Dim_Detail__": "Nov-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Nov",
        "profit": 110000,
        "sales": 2200000,
        "year": "2019",
      },
      "month": "Nov",
      "sales": 2200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Nov-profit",
      "__Dim_Color__": "Nov",
      "__Dim_Detail__": "Nov-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 110000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Nov",
        "profit": 110000,
        "sales": 2200000,
        "year": "2019",
      },
      "month": "Nov",
      "profit": 110000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Nov-discount",
      "__Dim_Color__": "Nov",
      "__Dim_Detail__": "Nov-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Nov",
        "profit": 110000,
        "sales": 2200000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Nov",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Dec-sales",
      "__Dim_Color__": "Dec",
      "__Dim_Detail__": "Dec-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Dec",
        "profit": 120000,
        "sales": 2400000,
        "year": "2019",
      },
      "month": "Dec",
      "sales": 2400000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Dec-profit",
      "__Dim_Color__": "Dec",
      "__Dim_Detail__": "Dec-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 120000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Dec",
        "profit": 120000,
        "sales": 2400000,
        "year": "2019",
      },
      "month": "Dec",
      "profit": 120000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Dec-discount",
      "__Dim_Color__": "Dec",
      "__Dim_Detail__": "Dec-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Dec",
        "profit": 120000,
        "sales": 2400000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Dec",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jan-sales",
      "__Dim_Color__": "Jan",
      "__Dim_Detail__": "Jan-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jan-profit",
      "__Dim_Color__": "Jan",
      "__Dim_Detail__": "Jan-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "profit": 10000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jan-discount",
      "__Dim_Color__": "Jan",
      "__Dim_Detail__": "Jan-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "discount": 0.5,
      "month": "Jan",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Feb-sales",
      "__Dim_Color__": "Feb",
      "__Dim_Detail__": "Feb-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Feb-profit",
      "__Dim_Color__": "Feb",
      "__Dim_Detail__": "Feb-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "profit": 20000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Feb-discount",
      "__Dim_Color__": "Feb",
      "__Dim_Detail__": "Feb-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Feb",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Mar-sales",
      "__Dim_Color__": "Mar",
      "__Dim_Detail__": "Mar-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Mar-profit",
      "__Dim_Color__": "Mar",
      "__Dim_Detail__": "Mar-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "profit": 30000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Mar-discount",
      "__Dim_Color__": "Mar",
      "__Dim_Detail__": "Mar-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Mar",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Apr-sales",
      "__Dim_Color__": "Apr",
      "__Dim_Detail__": "Apr-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Apr-profit",
      "__Dim_Color__": "Apr",
      "__Dim_Detail__": "Apr-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "profit": 40000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Apr-discount",
      "__Dim_Color__": "Apr",
      "__Dim_Detail__": "Apr-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Apr",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "May-sales",
      "__Dim_Color__": "May",
      "__Dim_Detail__": "May-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "May-profit",
      "__Dim_Color__": "May",
      "__Dim_Detail__": "May-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "profit": 50000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "May-discount",
      "__Dim_Color__": "May",
      "__Dim_Detail__": "May-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.05,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "discount": 0.05,
      "month": "May",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jun-sales",
      "__Dim_Color__": "Jun",
      "__Dim_Detail__": "Jun-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jun-profit",
      "__Dim_Color__": "Jun",
      "__Dim_Detail__": "Jun-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 60000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "profit": 60000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jun-discount",
      "__Dim_Color__": "Jun",
      "__Dim_Detail__": "Jun-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Jun",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jul-sales",
      "__Dim_Color__": "Jul",
      "__Dim_Detail__": "Jul-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1400000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Jul",
        "profit": 70000,
        "sales": 1400000,
        "year": "2020",
      },
      "month": "Jul",
      "sales": 1400000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jul-profit",
      "__Dim_Color__": "Jul",
      "__Dim_Detail__": "Jul-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 70000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Jul",
        "profit": 70000,
        "sales": 1400000,
        "year": "2020",
      },
      "month": "Jul",
      "profit": 70000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jul-discount",
      "__Dim_Color__": "Jul",
      "__Dim_Detail__": "Jul-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Jul",
        "profit": 70000,
        "sales": 1400000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Jul",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Aug-sales",
      "__Dim_Color__": "Aug",
      "__Dim_Detail__": "Aug-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1600000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Aug",
        "profit": 80000,
        "sales": 1600000,
        "year": "2020",
      },
      "month": "Aug",
      "sales": 1600000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Aug-profit",
      "__Dim_Color__": "Aug",
      "__Dim_Detail__": "Aug-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 80000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Aug",
        "profit": 80000,
        "sales": 1600000,
        "year": "2020",
      },
      "month": "Aug",
      "profit": 80000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Aug-discount",
      "__Dim_Color__": "Aug",
      "__Dim_Detail__": "Aug-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Aug",
        "profit": 80000,
        "sales": 1600000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Aug",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sep-sales",
      "__Dim_Color__": "Sep",
      "__Dim_Detail__": "Sep-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1800000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Sep",
        "profit": 90000,
        "sales": 1800000,
        "year": "2020",
      },
      "month": "Sep",
      "sales": 1800000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sep-profit",
      "__Dim_Color__": "Sep",
      "__Dim_Detail__": "Sep-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 90000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Sep",
        "profit": 90000,
        "sales": 1800000,
        "year": "2020",
      },
      "month": "Sep",
      "profit": 90000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sep-discount",
      "__Dim_Color__": "Sep",
      "__Dim_Detail__": "Sep-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Sep",
        "profit": 90000,
        "sales": 1800000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Sep",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Oct-sales",
      "__Dim_Color__": "Oct",
      "__Dim_Detail__": "Oct-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2000000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Oct",
        "profit": 100000,
        "sales": 2000000,
        "year": "2020",
      },
      "month": "Oct",
      "sales": 2000000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Oct-profit",
      "__Dim_Color__": "Oct",
      "__Dim_Detail__": "Oct-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 100000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Oct",
        "profit": 100000,
        "sales": 2000000,
        "year": "2020",
      },
      "month": "Oct",
      "profit": 100000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Oct-discount",
      "__Dim_Color__": "Oct",
      "__Dim_Detail__": "Oct-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Oct",
        "profit": 100000,
        "sales": 2000000,
        "year": "2020",
      },
      "discount": 0.5,
      "month": "Oct",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Nov-sales",
      "__Dim_Color__": "Nov",
      "__Dim_Detail__": "Nov-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Nov",
        "profit": 110000,
        "sales": 2200000,
        "year": "2020",
      },
      "month": "Nov",
      "sales": 2200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Nov-profit",
      "__Dim_Color__": "Nov",
      "__Dim_Detail__": "Nov-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 110000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Nov",
        "profit": 110000,
        "sales": 2200000,
        "year": "2020",
      },
      "month": "Nov",
      "profit": 110000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Nov-discount",
      "__Dim_Color__": "Nov",
      "__Dim_Detail__": "Nov-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Nov",
        "profit": 110000,
        "sales": 2200000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Nov",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Dec-sales",
      "__Dim_Color__": "Dec",
      "__Dim_Detail__": "Dec-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 2400000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Dec",
        "profit": 120000,
        "sales": 2400000,
        "year": "2020",
      },
      "month": "Dec",
      "sales": 2400000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Dec-profit",
      "__Dim_Color__": "Dec",
      "__Dim_Detail__": "Dec-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 120000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Dec",
        "profit": 120000,
        "sales": 2400000,
        "year": "2020",
      },
      "month": "Dec",
      "profit": 120000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Dec-discount",
      "__Dim_Color__": "Dec",
      "__Dim_Detail__": "Dec-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Dec",
        "profit": 120000,
        "sales": 2400000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Dec",
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "discount": "Discount",
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "columnParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "Apr-discount": "Apr",
          "Apr-profit": "Apr",
          "Apr-sales": "Apr",
          "Aug-discount": "Aug",
          "Aug-profit": "Aug",
          "Aug-sales": "Aug",
          "Dec-discount": "Dec",
          "Dec-profit": "Dec",
          "Dec-sales": "Dec",
          "Feb-discount": "Feb",
          "Feb-profit": "Feb",
          "Feb-sales": "Feb",
          "Jan-discount": "Jan",
          "Jan-profit": "Jan",
          "Jan-sales": "Jan",
          "Jul-discount": "Jul",
          "Jul-profit": "Jul",
          "Jul-sales": "Jul",
          "Jun-discount": "Jun",
          "Jun-profit": "Jun",
          "Jun-sales": "Jun",
          "Mar-discount": "Mar",
          "Mar-profit": "Mar",
          "Mar-sales": "Mar",
          "May-discount": "May",
          "May-profit": "May",
          "May-sales": "May",
          "Nov-discount": "Nov",
          "Nov-profit": "Nov",
          "Nov-sales": "Nov",
          "Oct-discount": "Oct",
          "Oct-profit": "Oct",
          "Oct-sales": "Oct",
          "Sep-discount": "Sep",
          "Sep-profit": "Sep",
          "Sep-sales": "Sep",
        },
        "colorItems": [
          "Jan-sales",
          "Jan-profit",
          "Jan-discount",
          "Feb-sales",
          "Feb-profit",
          "Feb-discount",
          "Mar-sales",
          "Mar-profit",
          "Mar-discount",
          "Apr-sales",
          "Apr-profit",
          "Apr-discount",
          "May-sales",
          "May-profit",
          "May-discount",
          "Jun-sales",
          "Jun-profit",
          "Jun-discount",
          "Jul-sales",
          "Jul-profit",
          "Jul-discount",
          "Aug-sales",
          "Aug-profit",
          "Aug-discount",
          "Sep-sales",
          "Sep-profit",
          "Sep-discount",
          "Oct-sales",
          "Oct-profit",
          "Oct-discount",
          "Nov-sales",
          "Nov-profit",
          "Nov-discount",
          "Dec-sales",
          "Dec-profit",
          "Dec-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "month",
    ],
    "detail": [
      "month",
      "__MeaName__",
    ],
    "x": [
      "year",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "Sales",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "Profit",
      "autoFormat": true,
      "id": "profit",
    },
    {
      "alias": "Discount",
      "autoFormat": true,
      "id": "discount",
    },
  ],
}
`;

exports[`columnParallel 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "Jan-sales",
      "Jan-profit",
      "Jan-discount",
      "Feb-sales",
      "Feb-profit",
      "Feb-discount",
      "Mar-sales",
      "Mar-profit",
      "Mar-discount",
      "Apr-sales",
      "Apr-profit",
      "Apr-discount",
      "May-sales",
      "May-profit",
      "May-discount",
      "Jun-sales",
      "Jun-profit",
      "Jun-discount",
      "Jul-sales",
      "Jul-profit",
      "Jul-discount",
      "Aug-sales",
      "Aug-profit",
      "Aug-discount",
      "Sep-sales",
      "Sep-profit",
      "Sep-discount",
      "Oct-sales",
      "Oct-profit",
      "Oct-discount",
      "Nov-sales",
      "Nov-profit",
      "Nov-discount",
      "Dec-sales",
      "Dec-profit",
      "Dec-discount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "columnParallel",
    "values": [
      {
        "__Dim_ColorId__": "Jan-sales",
        "__Dim_Color__": "Jan",
        "__Dim_Detail__": "Jan-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jan-profit",
        "__Dim_Color__": "Jan",
        "__Dim_Detail__": "Jan-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 10000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jan-discount",
        "__Dim_Color__": "Jan",
        "__Dim_Detail__": "Jan-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Feb-sales",
        "__Dim_Color__": "Feb",
        "__Dim_Detail__": "Feb-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Feb-profit",
        "__Dim_Color__": "Feb",
        "__Dim_Detail__": "Feb-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 20000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Feb-discount",
        "__Dim_Color__": "Feb",
        "__Dim_Detail__": "Feb-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Mar-sales",
        "__Dim_Color__": "Mar",
        "__Dim_Detail__": "Mar-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Mar-profit",
        "__Dim_Color__": "Mar",
        "__Dim_Detail__": "Mar-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 30000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Mar-discount",
        "__Dim_Color__": "Mar",
        "__Dim_Detail__": "Mar-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Apr-sales",
        "__Dim_Color__": "Apr",
        "__Dim_Detail__": "Apr-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Apr-profit",
        "__Dim_Color__": "Apr",
        "__Dim_Detail__": "Apr-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 40000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Apr-discount",
        "__Dim_Color__": "Apr",
        "__Dim_Detail__": "Apr-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "May-sales",
        "__Dim_Color__": "May",
        "__Dim_Detail__": "May-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "May-profit",
        "__Dim_Color__": "May",
        "__Dim_Detail__": "May-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 50000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "May-discount",
        "__Dim_Color__": "May",
        "__Dim_Detail__": "May-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jun-sales",
        "__Dim_Color__": "Jun",
        "__Dim_Detail__": "Jun-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jun-profit",
        "__Dim_Color__": "Jun",
        "__Dim_Detail__": "Jun-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 60000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jun-discount",
        "__Dim_Color__": "Jun",
        "__Dim_Detail__": "Jun-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jul-sales",
        "__Dim_Color__": "Jul",
        "__Dim_Detail__": "Jul-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1400000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Jul",
          "profit": 70000,
          "sales": 1400000,
          "year": "2019",
        },
        "month": "Jul",
        "sales": 1400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jul-profit",
        "__Dim_Color__": "Jul",
        "__Dim_Detail__": "Jul-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 70000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Jul",
          "profit": 70000,
          "sales": 1400000,
          "year": "2019",
        },
        "month": "Jul",
        "profit": 70000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jul-discount",
        "__Dim_Color__": "Jul",
        "__Dim_Detail__": "Jul-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Jul",
          "profit": 70000,
          "sales": 1400000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Jul",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Aug-sales",
        "__Dim_Color__": "Aug",
        "__Dim_Detail__": "Aug-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1600000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Aug",
          "profit": 80000,
          "sales": 1600000,
          "year": "2019",
        },
        "month": "Aug",
        "sales": 1600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Aug-profit",
        "__Dim_Color__": "Aug",
        "__Dim_Detail__": "Aug-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 80000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Aug",
          "profit": 80000,
          "sales": 1600000,
          "year": "2019",
        },
        "month": "Aug",
        "profit": 80000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Aug-discount",
        "__Dim_Color__": "Aug",
        "__Dim_Detail__": "Aug-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Aug",
          "profit": 80000,
          "sales": 1600000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Aug",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sep-sales",
        "__Dim_Color__": "Sep",
        "__Dim_Detail__": "Sep-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1800000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Sep",
          "profit": 90000,
          "sales": 1800000,
          "year": "2019",
        },
        "month": "Sep",
        "sales": 1800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sep-profit",
        "__Dim_Color__": "Sep",
        "__Dim_Detail__": "Sep-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 90000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Sep",
          "profit": 90000,
          "sales": 1800000,
          "year": "2019",
        },
        "month": "Sep",
        "profit": 90000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sep-discount",
        "__Dim_Color__": "Sep",
        "__Dim_Detail__": "Sep-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Sep",
          "profit": 90000,
          "sales": 1800000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Sep",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Oct-sales",
        "__Dim_Color__": "Oct",
        "__Dim_Detail__": "Oct-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 2000000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Oct",
          "profit": 100000,
          "sales": 2000000,
          "year": "2019",
        },
        "month": "Oct",
        "sales": 2000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Oct-profit",
        "__Dim_Color__": "Oct",
        "__Dim_Detail__": "Oct-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 100000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Oct",
          "profit": 100000,
          "sales": 2000000,
          "year": "2019",
        },
        "month": "Oct",
        "profit": 100000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Oct-discount",
        "__Dim_Color__": "Oct",
        "__Dim_Detail__": "Oct-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Oct",
          "profit": 100000,
          "sales": 2000000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Oct",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Nov-sales",
        "__Dim_Color__": "Nov",
        "__Dim_Detail__": "Nov-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 2200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Nov",
          "profit": 110000,
          "sales": 2200000,
          "year": "2019",
        },
        "month": "Nov",
        "sales": 2200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Nov-profit",
        "__Dim_Color__": "Nov",
        "__Dim_Detail__": "Nov-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 110000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Nov",
          "profit": 110000,
          "sales": 2200000,
          "year": "2019",
        },
        "month": "Nov",
        "profit": 110000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Nov-discount",
        "__Dim_Color__": "Nov",
        "__Dim_Detail__": "Nov-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Nov",
          "profit": 110000,
          "sales": 2200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Nov",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Dec-sales",
        "__Dim_Color__": "Dec",
        "__Dim_Detail__": "Dec-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 2400000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Dec",
          "profit": 120000,
          "sales": 2400000,
          "year": "2019",
        },
        "month": "Dec",
        "sales": 2400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Dec-profit",
        "__Dim_Color__": "Dec",
        "__Dim_Detail__": "Dec-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 120000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Dec",
          "profit": 120000,
          "sales": 2400000,
          "year": "2019",
        },
        "month": "Dec",
        "profit": 120000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Dec-discount",
        "__Dim_Color__": "Dec",
        "__Dim_Detail__": "Dec-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Dec",
          "profit": 120000,
          "sales": 2400000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Dec",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jan-sales",
        "__Dim_Color__": "Jan",
        "__Dim_Detail__": "Jan-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jan-profit",
        "__Dim_Color__": "Jan",
        "__Dim_Detail__": "Jan-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 10000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jan-discount",
        "__Dim_Color__": "Jan",
        "__Dim_Detail__": "Jan-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Feb-sales",
        "__Dim_Color__": "Feb",
        "__Dim_Detail__": "Feb-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Feb-profit",
        "__Dim_Color__": "Feb",
        "__Dim_Detail__": "Feb-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 20000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Feb-discount",
        "__Dim_Color__": "Feb",
        "__Dim_Detail__": "Feb-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Mar-sales",
        "__Dim_Color__": "Mar",
        "__Dim_Detail__": "Mar-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Mar-profit",
        "__Dim_Color__": "Mar",
        "__Dim_Detail__": "Mar-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 30000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Mar-discount",
        "__Dim_Color__": "Mar",
        "__Dim_Detail__": "Mar-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Apr-sales",
        "__Dim_Color__": "Apr",
        "__Dim_Detail__": "Apr-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Apr-profit",
        "__Dim_Color__": "Apr",
        "__Dim_Detail__": "Apr-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 40000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Apr-discount",
        "__Dim_Color__": "Apr",
        "__Dim_Detail__": "Apr-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "May-sales",
        "__Dim_Color__": "May",
        "__Dim_Detail__": "May-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "May-profit",
        "__Dim_Color__": "May",
        "__Dim_Detail__": "May-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 50000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "May-discount",
        "__Dim_Color__": "May",
        "__Dim_Detail__": "May-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jun-sales",
        "__Dim_Color__": "Jun",
        "__Dim_Detail__": "Jun-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jun-profit",
        "__Dim_Color__": "Jun",
        "__Dim_Detail__": "Jun-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 60000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jun-discount",
        "__Dim_Color__": "Jun",
        "__Dim_Detail__": "Jun-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jul-sales",
        "__Dim_Color__": "Jul",
        "__Dim_Detail__": "Jul-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1400000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Jul",
          "profit": 70000,
          "sales": 1400000,
          "year": "2020",
        },
        "month": "Jul",
        "sales": 1400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jul-profit",
        "__Dim_Color__": "Jul",
        "__Dim_Detail__": "Jul-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 70000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Jul",
          "profit": 70000,
          "sales": 1400000,
          "year": "2020",
        },
        "month": "Jul",
        "profit": 70000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jul-discount",
        "__Dim_Color__": "Jul",
        "__Dim_Detail__": "Jul-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Jul",
          "profit": 70000,
          "sales": 1400000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Jul",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Aug-sales",
        "__Dim_Color__": "Aug",
        "__Dim_Detail__": "Aug-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1600000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Aug",
          "profit": 80000,
          "sales": 1600000,
          "year": "2020",
        },
        "month": "Aug",
        "sales": 1600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Aug-profit",
        "__Dim_Color__": "Aug",
        "__Dim_Detail__": "Aug-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 80000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Aug",
          "profit": 80000,
          "sales": 1600000,
          "year": "2020",
        },
        "month": "Aug",
        "profit": 80000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Aug-discount",
        "__Dim_Color__": "Aug",
        "__Dim_Detail__": "Aug-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Aug",
          "profit": 80000,
          "sales": 1600000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Aug",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sep-sales",
        "__Dim_Color__": "Sep",
        "__Dim_Detail__": "Sep-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1800000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Sep",
          "profit": 90000,
          "sales": 1800000,
          "year": "2020",
        },
        "month": "Sep",
        "sales": 1800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sep-profit",
        "__Dim_Color__": "Sep",
        "__Dim_Detail__": "Sep-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 90000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Sep",
          "profit": 90000,
          "sales": 1800000,
          "year": "2020",
        },
        "month": "Sep",
        "profit": 90000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sep-discount",
        "__Dim_Color__": "Sep",
        "__Dim_Detail__": "Sep-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Sep",
          "profit": 90000,
          "sales": 1800000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Sep",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Oct-sales",
        "__Dim_Color__": "Oct",
        "__Dim_Detail__": "Oct-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 2000000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Oct",
          "profit": 100000,
          "sales": 2000000,
          "year": "2020",
        },
        "month": "Oct",
        "sales": 2000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Oct-profit",
        "__Dim_Color__": "Oct",
        "__Dim_Detail__": "Oct-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 100000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Oct",
          "profit": 100000,
          "sales": 2000000,
          "year": "2020",
        },
        "month": "Oct",
        "profit": 100000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Oct-discount",
        "__Dim_Color__": "Oct",
        "__Dim_Detail__": "Oct-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Oct",
          "profit": 100000,
          "sales": 2000000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Oct",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Nov-sales",
        "__Dim_Color__": "Nov",
        "__Dim_Detail__": "Nov-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 2200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Nov",
          "profit": 110000,
          "sales": 2200000,
          "year": "2020",
        },
        "month": "Nov",
        "sales": 2200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Nov-profit",
        "__Dim_Color__": "Nov",
        "__Dim_Detail__": "Nov-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 110000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Nov",
          "profit": 110000,
          "sales": 2200000,
          "year": "2020",
        },
        "month": "Nov",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Nov-discount",
        "__Dim_Color__": "Nov",
        "__Dim_Detail__": "Nov-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Nov",
          "profit": 110000,
          "sales": 2200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Nov",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Dec-sales",
        "__Dim_Color__": "Dec",
        "__Dim_Detail__": "Dec-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 2400000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Dec",
          "profit": 120000,
          "sales": 2400000,
          "year": "2020",
        },
        "month": "Dec",
        "sales": 2400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Dec-profit",
        "__Dim_Color__": "Dec",
        "__Dim_Detail__": "Dec-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 120000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Dec",
          "profit": 120000,
          "sales": 2400000,
          "year": "2020",
        },
        "month": "Dec",
        "profit": 120000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Dec-discount",
        "__Dim_Color__": "Dec",
        "__Dim_Detail__": "Dec-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Dec",
          "profit": 120000,
          "sales": 2400000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Dec",
        "year": "2020",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [
    4,
    4,
    4,
    4,
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "__Dim_X__",
    "__Dim_Detail__",
  ],
  "yField": "__MeaValue__",
}
`;
